--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,15 @@
 
 footer {
     background-color: black;
-    padding-block-end: 5%;
+    padding: 20px 0;
+    color: white;
+    text-align: center;
 }
 
-.copy {
+/* .copy {
     color: white;
     display: flex;
     align-items: center;
     justify-content: center;
     
-}
+} */
